# DraGon

./: .gitignore  MODEL_MODULE_SUMMARY.md  WANDB_RUN_EW2IMCQE_REVIEW.md  diagnostic.md  fetchdata.py  pyproject.toml  run.py  setup_local_wandb.sh
config/: __init__.py  api.py  conf.py  config.py  data.py  global.py  models.py  train.py
docs/: cross_scale_fusion_design_log.txt
instructions/: 01_wavelet_denoise.md  01x1_patch.md  02_modern_tcn_film_encoder.md  03_conditioning_encoder.md  04_star_fusion.md  05_exogenous_fusion.md  06_cross_scale_fusion.md  07_towers_heads.md  08_losses.md  09_network.md  10_train.md  visualization_plan_wandb.md
src/: cli.py  task_labels.py
src/data/: DATA_SPEC.md  models.py  pipelines.py  registry.py  types.py
src/data/assembler/: __init__.py  assemble.py  sampler.py
src/data/processor/: __init__.py  basic.py  label.py  ohlcv.py  process.py  sidechain.py  utils.py
src/data/providers/: base.py
src/data/providers/api/: mairui.py  mapping.py  registry.py  tushare.py
src/data/registry/: __init__.py  api.py  dataset.py  processed.py  processor.py  raw.py
src/data/schema/: raw.py
src/data/schemas/: __init__.py  processed.py  raw.py
src/data/storage/: npy_io.py  parquet_io.py  raw.py
src/data/utils/: raw.py
src/data/validators/: __init__.py  raw.py  validate_df.py
src/models/: ARCHITECTURE_FRONTEND.md  __init__.py
src/models/arch/: __init__.py
src/models/arch/embeddings/: __init__.py  condition_embedding1d.py
src/models/arch/encoders/: __init__.py  conditioning_encoder.py  dual_domain_scale_encoder.py  modern_tcn_film_encoder.py
src/models/arch/fusions/: __init__.py  adaln_zero_topdown_fusion.py  cross_scale_fusion.py  exogenous_bridge_fusion.py  scale_context_bridge_fusion.py  time_topdown_hierarchical_fusion.py  wavelet_bottomup_support_fusion.py  (+1 more)
src/models/architectures/: __init__.py  network.py
src/models/components/: __init__.py  normalization.py
src/models/config/: __init__.py  hparams.py
src/models/losses/: __init__.py  laplace_lse_loss.py  objectives.py  single_task_loss.py
src/train/: __init__.py  benchmark.py  checkpoint.py  collate.py  console.py  dataloaders.py  dataset.py  fit.py  profiler.py  runtime.py  tensorboard_logger.py  train.py  train_entry.py  trainer.py  ui.py  utils.py  validate.py  visualize.py  visualize_strict.py  wandb_logger.py
src/utils/: log.py
tests/: test_cli.py  test_wavelet_denoise.py
tests/data/: test_processor_bruteforce_parity.py  test_smoke_assemble_payload.py  test_smoke_basic_processors.py  test_smoke_label_processor.py  test_smoke_ohlcv_diff_features.py  test_smoke_processed_registry.py  test_smoke_sidechain_diff_features.py
tests/models/encoders/: test_conditioning_encoder.py  test_modern_tcn_film_encoder.py
tests/models/fusions/: test_adaln_zero_topdown_fusion.py  test_cross_scale_fusion.py  test_exogenous_bridge_fusion.py  test_scale_context_bridge_fusion.py  test_wavelet_bottomup_support_fusion.py  test_within_scale_star_fusion.py
tests/models/heads/: test_multi_task_heads.py  test_single_task_head.py
tests/models/layers/: test_feature_channel_dropout.py
tests/models/losses/: test_multi_task_loss.py  test_single_task_loss.py
tests/models/networks/: test_multi_scale_forecast_network.py
tests/train/: test_console.py  test_dataset_io.py  test_runtime_config.py  test_tensorboard_logger.py  test_trainer_smoke.py  test_wandb_logger.py
tools/: check_assembled.py  export_model_graph.py  monitor.py  run_assembled_pipeline.py  run_processed_pipeline.py  run_raw_pipeline.py  watch_train_then_start_sigma.py
(+58 files in other folders)
