[project]
name = "dragon"
version = "0.1.0"
description = "A Chinese stock data processing and analysis system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["stock", "finance", "data-pipeline", "tushare", "polars", "parquet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "mlflow>=2.16.0",
    "numpy>=1.26.0,<2.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "pydantic>=2.6.0",
    "scipy>=1.12.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "ptwt>=0.1.8",
    "tushare>=1.4.0",
    "tqdm>=4.65.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
dragon = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "config", "tools"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
