[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon"
version = "0.1.0"
description = "A Chinese stock data processing and analysis system"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["stock", "finance", "data-pipeline", "tushare", "polars", "parquet"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27.0",
  "matplotlib>=3.9.0",
  "mlflow>=2.16.0",
  "numpy>=1.26.0,<2.0",
  "pandas>=2.2.0",
  "polars>=0.20.0",
  "ptwt>=0.1.9",
  "pyarrow>=14.0.0",
  "pydantic>=2.6.0",
  "rich>=13.7.0",
  "scipy>=1.12.0",
  "tenacity>=8.2.0",
  "torch==2.11.0",
  "torchvision==0.26.0",
  "tqdm>=4.65.0",
  "tushare>=1.4.0",
  "wandb>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.0",
]

[project.scripts]
dragon = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["config*", "src*"]
